Traspasando el plugin a godot 2

--- a/addons/RPGElements/plugin.cfg
+++ b/addons/RPGElements/plugin.cfg
@@ -2,5 +2,5 @@
 name="RPGElements"
 description="Plugin para Godot Engine que añade nuevos nodos para facilitar la lógica y almacenaje de datos de juegos RPG."
 author="Matías Muñoz Espinoza"
-version="0.1.0"
+version="0.1.0-godot-2"
 script="plugin.gd" 
