--- a/addons/PersistenceNode/plugin.cfg
+++ b/addons/PersistenceNode/plugin.cfg
@@ -2,5 +2,5 @@
 name="PersistenceNode"
 description="Plugin que facilita el almacenar datos de forma persistente."
 author="Matías Muñoz Espinoza"
-version="1.3.0"
+version="1.3.1-godot-2.1"
 script="plugin.gd" 
